--- a/flaskr/templates/layout/father.html
+++ b/flaskr/templates/layout/father.html
@@ -8,11 +8,14 @@
   {% endblock %}
 </head>
 <body>
-  <h1>{{ self.title() }} - Itab</h1>
-  {% block content %}
-  {% endblock %}
-  <hr>
-  <p>Itab</p>
+  <div class="container-fluid">
+    <h1>{{ self.title() }} - Itab</h1>
+    {% block content %}
+    {% endblock %}
+    <hr>
+    <p>Itab</p>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 </body>
