--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -9,13 +9,19 @@
         <hr>
         <a href=" {{ url_for('ddt') }} " class="btn btn-primary">Compila un nuovo DDT</a>
         <hr>
+
+        <!-- DDT List-->
         <h1>I tuoi DDT</h1>
-        {% for ddt in ddtlist %}
-        <p>{{ddt}}</p>
-        {% endfor %}
-    {% else %}
-        <form action="{{ url_for('login') }}">
-            <button type="submit">Login</button>
-        </form>
-{% endif %}
+        <div class="container">
+          {% for ddt in ddtlist %}
+          <div class="border border-dark row">
+            <div class="col-md-10 col-sm-12"> <p>{{ddt}}</p> </div>
+            <div class="col-md-1 col-sm-12"><a class="btn btn-danger" href="">Elimina</a></div>
+            <div class="col-md-1 col-sm-12"><a class="btn btn-primary" href="">Modifica</a></div>
+          </div>
+          {% endfor %}
+        </div>
+        {% else %}
+        <a class="btn btn-primary" href="{{url_for('login')}}">Login</a>
+{% endif %} 
 {% endblock %}
