--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -7,7 +7,7 @@
 <p>Benvenuto {{ username }}.</p>
         <a href="{{ url_for('logout') }}" class="btn btn-primary">Logout</a>
         <hr>
-        <a href=" {{ url_for('ddt') }} " class="btn btn-primary">Compila un nuovo DDT</a>
+        <a href=" {{ url_for('newddt') }} " class="btn btn-primary">Compila un nuovo DDT</a>
         <hr>
 
         <!-- DDT List-->
