--- a/flaskr/templates/layout/father.html
+++ b/flaskr/templates/layout/father.html
@@ -4,7 +4,8 @@
     {% block head %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %} - ITAB</title>
+    <title>{% block title %}{% endblock %} - ITAB
+    </title>
     {% endblock %}
   </head>
   <body>
@@ -12,36 +13,33 @@
 
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Gestione DDT</a>
+          <a class="navbar-brand" href="#">Gestione DDT
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon">
+            </span>
           </button>
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <a class="nav-link" href="{{url_for('index')}}">Pagina principale</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{url_for('newddt')}}"> DDT </a>
-              </li>
-</ul>
+            </ul>
 
             <span class="navbar-text">
               {% if login %}
               Sei autenticato come {{ username }},
-              <a href="url_for('logout')">Logout</a>.
+              <a href="{{url_for('logout')}}">Logout
+              </a>.
               {% endif %}
             </span>
           </div>
         </div>
       </nav>
-     
+
       {% block content %}
       {% endblock %}
-      <hr>
-      <p>Itab</p>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
 
   </body>
 </html>
