--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -26,7 +26,7 @@
   <div class="border border-dark row">
     <div class="col-md-10 col-sm-12"> <p>{{ddt}}</p> </div>
     <div class="col-md-1 col-sm-12"><a class="btn btn-danger" href="">Elimina</a></div>
-    <div class="col-md-1 col-sm-12"><a class="btn btn-primary" href="">Modifica</a></div>
+    <div class="col-md-1 col-sm-12"><a class="btn btn-primary" href="{{url_for('ddt', ddtnum=ddt['id'])}}">Modifica</a></div>
   </div>
   {% endfor %}
 </div>
