--- a/flaskr/templates/ddt_view.html
+++ b/flaskr/templates/ddt_view.html
@@ -38,7 +38,7 @@
 
 <div class="d-flex justify-content-around">
 
-    <a class="btn btn-primary" href="">Torna indietro</a>
+    <a class="btn btn-primary" href="{{url_for('index')}}">Torna indietro</a>
     <a class="btn btn-danger" href="">Elimina DDT</a>
     <a class="btn btn-primary" href="">Modifica DDT</a>
     <a class="btn btn-primary" href="{{url_for('articoli', ddtnum=ddt['id'])}}">Aggiungi articoli</a>
