--- a/flaskr/templates/layout/father.html
+++ b/flaskr/templates/layout/father.html
@@ -13,7 +13,7 @@
 
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Gestione DDT
+          <a class="navbar-brand" href="{{url_for('index')}}">Gestione DDT
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
