--- a/flaskr/templates/new_lavorazione.html
+++ b/flaskr/templates/new_lavorazione.html
@@ -3,7 +3,7 @@
 <h1>Aggiungi una nuova lavorazione</h1>
 <form id="form">
   <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="Punzonatura" onclick="toggleHide('punzonatura')">
+    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="Punzonatura" >
     <label class="form-check-label" for="flexCheckDefault">
       Punzonatura
     </label>
@@ -17,43 +17,29 @@
   </div>
   {% endif %}
   <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="Piegatura" onclick="toggleHide('piegatura')">
+    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="Piegatura">
     <label class="form-check-label" for="flexCheckDefault">
       Piegatura
     </label>
   </div>
   <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="Taglio" onclick="toggleHide('taglio')">
+    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="Taglio">
     <label class="form-check-label" for="flexCheckDefault">
       Taglio
     </label>
   </div>
   <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="Foratura" onclick="toggleHide('foratura')">
+    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="Foratura" >
     <label class="form-check-label" for="flexCheckDefault">
       Foratura
     </label>
   </div>
   
-
-  <div id="punzonatura" class="row border m-3 p-3 form">
-    <h3>Punzonatura</h3>
-  </div>
   {% if can_saldatura %}
   <div id="saldatura" class="row border m-3 p-3 form">
     <h3>Saldatura</h3>
   </div>
-  {% endif %}
-  <div id="piegatura" class="row border m-3 p-3 form">
-    <h3>Piegatura</h3>
-  </div>
-  <div id="taglio" class="row border m-3 p-3 form">
-    <h3>Taglio</h3>
-  </div>
-  <div id="foratura" class="row border m-3 p-3 form">
-    <h3>Foratura</h3>
-  </div>
-  
+  {% endif %}  
 </form>
 {% endblock %}
 {% block js %}
